# extract-dailymed-spl

./: .gitignore  .gitmodules  .pre-commit-config.yaml  FileMetadata.py  LICENSE.txt  README.md  code_explorer.py  detect_section.py  dm_parser.py  extract-dailymed-spl.code-workspace  pyproject.toml  terms.json  terms.txt
data/: curation.jsonl
src/: FileMetadata.py  async_dl.py  clean.py  code_explorer.py  dissimilar.py  dm_parser.py  download_spls.py  filter_dm.py  make_data_subsets.py  plot.py  plot2.py  rxmapping.py  rxnorm.ipynb  similarity.py
