[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "0.0.1"
name = "extract_dailymed_spl"
description = "Extract DailyMed SPL"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["DailyMed"]
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "lxml",
    "beautifulsoup4",
    "pyyaml"
    "pandas",
    "sentence-transformers",
    "scikit-learn",
    "plotly",
    "kaleido"
]


[project.optional-dependencies]
test = [
    "pre-commit",
]

[tool.hatch.envs.default]
features = [
    "test",
]
post-install-commands = [
    "pre-commit install",
]

[tool.hatch.envs.default.scripts]
fmt = [
    "pre-commit run --all --all-files",
]
